[build-system]
requires = ["setuptools", "wheel", "numpy>=1.19.5", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "quickspikes"
version = "2.0.7"
description = "detect and extract spikes in time series data"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",    
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English"
]
dependencies = [
    "numpy>=2.0.2",
]

[project.urls]
homepage = "https://github.com/melizalab/quickspikes"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.3",
]

[tool.setuptools]
packages = ["quickspikes"]
ext-modules = [
  {name = "quickspikes.spikes", sources = ["quickspikes/spikes.pyx"]}
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=quickspikes --cov-report=term-missing"
testpaths = ["test"]

[tool.ruff]
line-length = 88
target-version = "py37"
extend-exclude = ["build", "attic"]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
    "NPY201", # numpy 2.0
]

[tool.cibuildwheel]
skip= "cp314t-*"
test-requires = "pytest pytest-cov"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
# enable pypy builds - no longer on by default
enable = "pypy"
